; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_panels.c___create_panels_config_path.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_panels.c___create_panels_config_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @__create_panels_config_path(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %5 = call i8* (...) @__get_panels_config_dir_path()
  store i8* %5, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @r_sys_mkdirp(i8* %6)
  %8 = call i32 @R_JOIN_2_PATHS(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %9 = load i8*, i8** %3, align 8
  %10 = load i8*, i8** %2, align 8
  %11 = call i8* @r_str_newf(i32 %8, i8* %9, i8* %10)
  store i8* %11, i8** %4, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @R_FREE(i8* %12)
  %14 = load i8*, i8** %4, align 8
  ret i8* %14
}

declare dso_local i8* @__get_panels_config_dir_path(...) #1

declare dso_local i32 @r_sys_mkdirp(i8*) #1

declare dso_local i8* @r_str_newf(i32, i8*, i8*) #1

declare dso_local i32 @R_JOIN_2_PATHS(i8*, i8*) #1

declare dso_local i32 @R_FREE(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
